fixed clients card overflow

--- a/css/cleintsCard.css
+++ b/css/cleintsCard.css
@@ -1,12 +1,13 @@
 .homePageClientsSubCont{
-  width: max-content;
+  max-width: 60%;
+  min-width: 320px;
   margin: auto;
-  padding: 16px 24px;
   border-radius: 20px;
   box-shadow: 2px 2px 5px 2px #dde0e4;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   gap: 10px;
 }
 
@@ -30,18 +31,22 @@
   align-items: center;
 }
 
+.clientsHeadCont div span{
+  text-transform: capitalize;
+}
+
 .clientCardCont{
   max-width: 560px;
-  min-width: 320px; 
+  min-width: 280px; 
   overflow: auto;
-  padding: 16px 24px;
+  padding: 8px 12px;
   border-radius: 20px;
   box-shadow: 2px 2px 5px 2px #dde0e4;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: stretch;
-  gap: 20px;
+  gap: 10px;
 }
 
 .clientCard{
@@ -104,11 +109,4 @@
   color: #1e293b;
   font-weight: 600;
   text-transform: capitalize;
-}
-
-@media screen and (max-width: 428px) 
-{
-  /* .clientCardCont{
-    padding: 2px 4px;
-  } */
 }
